--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ variables:
   Major: '1'
   Minor: '0'
   Patch: '1'
-  PackageVersion: $(Build.DefinitionName)-$(date:yyyyMMdd)$(rev:.r)
+  PackageVersion: '1.0.1'
 
 steps:
 - task: UseDotNet@2
@@ -48,7 +48,7 @@ steps:
   inputs:
     command: 'pack'
     versioningScheme: byEnvVar
-    versionEnvVar: PackageVersion
+    versionEnvVar: '$(Build.DefinitionName)-$(date:yyyyMMdd)$(rev:.r)'
     packagesToPack: '**/SportsData.Core.csproj'
     packDestination: '$(Build.ArtifactStagingDirectory)'
 
