Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,6 +5,9 @@ name: $(BuildDefinitionName)_$(Year:yyyy).$(Month).$(DayOfMonth)$(Rev:.r)
 
 pool:
   vmImage: 'windows-latest'
+  name: Default
+  demands:
+    - Agent.Name -equals Default
 
 variables:
   solution: '**/*.sln'
