--- a/src/SportsData.Provider/appsettings.json
+++ b/src/SportsData.Provider/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ProviderDataContext": "Server=db;Database=sdProvider;User=sa;Password=1Secure*Password1;Encrypt=False;",
-    "Hangfire": "Server=db;Initial Catalog=sdProvider;User=sa;Password=1Secure*Password1;Encrypt=False;"
+    "ProviderDataContext": "Host=db;Port=5432;Database=provider;Username=postgres;Password=postgres;Include Error Detail=true",
+    "Hangfire": "Host=db;Port=5432;Database=provider;Username=postgres;Password=postgres;Include Error Detail=true"
   }
 }
