--- a/src/SportsData.Franchise/SportsData.Franchise.csproj
+++ b/src/SportsData.Franchise/SportsData.Franchise.csproj
@@ -11,12 +11,15 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
-    <PackageReference Include="SportsData.Core" Version="1.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SportsData.Core\SportsData.Core.csproj" />
   </ItemGroup>
 
 </Project>
