--- a/src/SportsData.Api/azure-pipelines.yml
+++ b/src/SportsData.Api/azure-pipelines.yml
@@ -43,6 +43,14 @@ stages:
         packageType: 'sdk'
         version: '9.0.x'
         includePreviewVersions: true
+
+    - task: NuGetCommand@2
+      displayName: 'NuGet Restore'
+      inputs:
+        command: 'restore'
+        restoreSolution: '**/sports-data-api.sln'
+        feedsToUse: 'select'
+        vstsFeed: '2bb0cd0d-fa6e-42f0-9b7e-9cc1ce065e55/de94ed5a-8390-4547-bdd9-f975a712aa70'
     
     - task: VSBuild@1
       displayName: 'Build sports-data-api solution'
