Update azure-pipelines.yml for Azure Pipelines

--- a/src/SportsData.Api/azure-pipelines.yml
+++ b/src/SportsData.Api/azure-pipelines.yml
@@ -53,7 +53,7 @@ stages:
       displayName: 'Build sports-data-api solution'
       inputs:
         solution: '**\sports-data-api.sln'
-        restoreNugetPackages: true
+        restoreNugetPackages: false
         platform: '$(buildPlatform)'
         configuration: '$(buildConfiguration)'
 
