--- a/src/SportsData.Api/azure-pipelines.yml
+++ b/src/SportsData.Api/azure-pipelines.yml
@@ -49,6 +49,7 @@ stages:
         restoreSolution: '/**/**/sports-data.sln'
         feedsToUse: 'select'
         vstsFeed: '2bb0cd0d-fa6e-42f0-9b7e-9cc1ce065e55/de94ed5a-8390-4547-bdd9-f975a712aa70'
+    - task: NuGetCommand@2
       inputs:
         command: 'restore'
         restoreSolution: '**/sports-data-api.sln'
