--- a/src/SportsData.Api/azure-pipelines.yml
+++ b/src/SportsData.Api/azure-pipelines.yml
@@ -49,11 +49,12 @@ stages:
         restoreSolution: '**/sports-data-api.sln'
         feedsToUse: 'select'
         vstsFeed: '2bb0cd0d-fa6e-42f0-9b7e-9cc1ce065e55/de94ed5a-8390-4547-bdd9-f975a712aa70'
-    - task: VSBuild@1
-      displayName: 'Build sports-data-api solution'
+    
+    - task: MSBuild@1
       inputs:
-        solution: '**\sports-data-api.sln'
-        restoreNugetPackages: false
+        solution: '**/sports-data-api.sln'
+        msbuildArchitecture: 'x64'
+        clean: true
         platform: '$(buildPlatform)'
         configuration: '$(buildConfiguration)'
 
