--- a/src/SportsData.Api/azure-pipelines.yml
+++ b/src/SportsData.Api/azure-pipelines.yml
@@ -49,10 +49,6 @@ stages:
         restoreSolution: '**/sports-data-api.sln'
         feedsToUse: 'select'
         vstsFeed: '2bb0cd0d-fa6e-42f0-9b7e-9cc1ce065e55/de94ed5a-8390-4547-bdd9-f975a712aa70'
-    
-    - task: CmdLine@2
-      inputs:
-        script: 'dotnet restore **/sports-data-api.sln'
 
     - task: MSBuild@1
       inputs:
@@ -62,6 +58,7 @@ stages:
         platform: '$(buildPlatform)'
         configuration: '$(buildConfiguration)'
         restoreNugetPackages: true
+        msbuildArguments: '/t:Restore'
 
     - task: DotNetCoreCLI@2
       displayName: 'Run Unit Tests'
