--- a/src/SportsData.Contest/azure-pipelines.yml
+++ b/src/SportsData.Contest/azure-pipelines.yml
@@ -9,10 +9,10 @@ resources:
 
 variables:
   # Container registry service connection established during pipeline creation
-  dockerRegistryServiceConnection: 'a9a78000-27ee-4628-be7e-d0ff370d71aa'
-  imageRepository: 'sportsdataapi'
+  dockerRegistryServiceConnection: '31f2836a-84b3-4ad0-bf15-f4ea41754d06'
+  imageRepository: 'sportsdatacontest'
   containerRegistry: 'sportdeets.azurecr.io'
-  dockerfilePath: '$(Build.SourcesDirectory)/src/SportsData.Api/Dockerfile'
+  dockerfilePath: '$(Build.SourcesDirectory)/src/SportsData.Contest/Dockerfile'
   tag: '$(Build.BuildId)'
 
   # Agent VM image name
@@ -22,14 +22,14 @@ variables:
   solution: '**/*.sln'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
-  Major: '0'
+  Major: '1'
   Minor: '0'
   Patch: '1'
-  PackageVersion: '0.0.1'
+  PackageVersion: '1.0.1'
 
   # Deploy Vars
   azureSubscription: 'dev-sports-data-connection'
-  appName: 'dev-sdapi'
+  appName: 'dev-sdcontest'
 
 stages:
 - stage: BuildAndTest
@@ -48,14 +48,14 @@ stages:
       displayName: 'NuGet Restore'
       inputs:
         command: 'restore'
-        restoreSolution: '**/sports-data-api.sln'
+        restoreSolution: '**/sports-data-contest.sln'
         feedsToUse: 'select'
         vstsFeed: '2bb0cd0d-fa6e-42f0-9b7e-9cc1ce065e55/de94ed5a-8390-4547-bdd9-f975a712aa70'
-
+    
     - task: MSBuild@1
-      displayName: 'Build sports-data-api solution'
+      displayName: 'Build sports-data-contest solution'
       inputs:
-        solution: '**/sports-data-api.sln'
+        solution: '**\sports-data-api.sln'
         msbuildArchitecture: 'x64'
         clean: true
         platform: '$(buildPlatform)'
@@ -64,34 +64,15 @@ stages:
         msbuildArguments: '/t:Restore'
 
     - task: DotNetCoreCLI@2
+      displayName: 'Run Unit Tests'
+      inputs:
+        command: 'test'
+        projects: '**/SportsData.Contest.Tests.Unit.csproj'
+        testRunTitle: 'contest-tests-unit'
+
+    - task: DotNetCoreCLI@2
       displayName: 'Run Integration Tests'
       inputs:
         command: 'test'
-        projects: '**/SportsData.Api.Tests.Integration.csproj'
-        testRunTitle: 'api-tests-int'
-
-- stage: BuildImagePushACR
-  displayName: Build Image & Push to ACR
-  jobs:
-  - job: Build
-    displayName: Build
-    pool:
-      vmImage: $(vmImageName)
-    steps:
-    - task: Docker@2
-      displayName: Build and push an image to container registry
-      inputs:
-        command: buildAndPush
-        repository: $(imageRepository)
-        dockerfile: $(dockerfilePath)
-        containerRegistry: $(dockerRegistryServiceConnection)
-        tags: |
-          $(tag)
-  - job: Deploy
-    steps:
-    - task: AzureWebAppContainer@1
-      displayName: 'Azure Web App on Container Deploy'
-      inputs:
-        azureSubscription: $(azureSubscription)
-        appName: $(appName)
-        containers: $(containerRegistry)/$(imageRepository):$(tag)
+        projects: '**/SportsData.Contest.Tests.Integration.csproj'
+        testRunTitle: 'contest-tests-int'
