--- a/src/SportsData.Contest/azure-pipelines.yml
+++ b/src/SportsData.Contest/azure-pipelines.yml
@@ -1,5 +1,10 @@
 trigger:
-- main
+  branches:
+    include:
+      - master
+  paths:
+    include:
+      - 'SportsData.Contest/*'
 
 pool:
   vmImage: 'windows-latest'
