--- a/src/SportsData.Franchise/azure-pipelines.yml
+++ b/src/SportsData.Franchise/azure-pipelines.yml
@@ -1,9 +1,10 @@
-# Docker
-# Build and push an image to Azure Container Registry
-# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
-
 trigger:
-- main
+  branches:
+    include:
+      - master
+  paths:
+    include:
+      - 'SportsData.Franchise/*'
 
 pool:
   vmImage: 'windows-latest'
