Update azure-pipelines.yml for Azure Pipelines

--- a/src/SportsData.Franchise/azure-pipelines.yml
+++ b/src/SportsData.Franchise/azure-pipelines.yml
@@ -4,7 +4,7 @@ trigger:
       - master
   paths:
     include:
-      - 'SportsData.Franchise/*'
+      - 'src/SportsData.Franchise/*'
 
 pool:
   vmImage: 'windows-latest'
