--- a/src/SportsData.Api/azure-pipelines.yml
+++ b/src/SportsData.Api/azure-pipelines.yml
@@ -4,7 +4,7 @@ trigger:
       - master
   paths:
     include:
-      - 'SportsData.Api/*'
+      - 'src/SportsData.Api/*'
 
 pool:
   vmImage: 'windows-latest'
