--- a/src/SportsData.Franchise/azure-pipelines.yml
+++ b/src/SportsData.Franchise/azure-pipelines.yml
@@ -66,6 +66,7 @@ stages:
         platform: '$(buildPlatform)'
         configuration: '$(buildConfiguration)'
         restoreNugetPackages: true
+        msbuildArguments: '/t:Restore'
 
     - task: DotNetCoreCLI@2
       displayName: 'Run Unit Tests'
