--- a/src/SportsData.Player/azure-pipelines.yml
+++ b/src/SportsData.Player/azure-pipelines.yml
@@ -1,9 +1,10 @@
-# Docker
-# Build and push an image to Azure Container Registry
-# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
-
 trigger:
-- main
+  branches:
+    include:
+      - main
+  paths:
+    include:
+      - 'src/SportsData.Player/*'
 
 pool:
   vmImage: 'windows-latest'
@@ -15,7 +16,7 @@ variables:
   # Container registry service connection established during pipeline creation
   dockerRegistryServiceConnection: '31f2836a-84b3-4ad0-bf15-f4ea41754d06'
   imageRepository: 'sportsdataplayer'
-  containerRegistry: 'sportdeetscr.azurecr.io'
+  containerRegistry: 'sportdeets.azurecr.io'
   dockerfilePath: '$(Build.SourcesDirectory)/src/SportsData.Player/Dockerfile'
   tag: '$(Build.BuildId)'
 
@@ -42,68 +43,41 @@ stages:
     displayName: BuildAndTest
     steps:
     - task: UseDotNet@2
-      displayName: 'Use .NET 8 SDK'
+      displayName: 'Use .NET 9 SDK'
       inputs:
         packageType: 'sdk'
-        version: '8.0.x'
+        version: '9.0.x'
         includePreviewVersions: true
 
     - task: NuGetCommand@2
       displayName: 'NuGet Restore'
       inputs:
         command: 'restore'
-        restoreSolution: '**/*.sln'
+        restoreSolution: '**/sports-data-player.sln'
         feedsToUse: 'select'
         vstsFeed: '2bb0cd0d-fa6e-42f0-9b7e-9cc1ce065e55/de94ed5a-8390-4547-bdd9-f975a712aa70'
     
-    - task: VSBuild@1
+    - task: MSBuild@1
       displayName: 'Build sports-data-player solution'
       inputs:
-        solution: '**\*.sln'
-        restoreNugetPackages: true
+        solution: '**\sports-data-player.sln'
+        msbuildArchitecture: 'x64'
+        clean: true
         platform: '$(buildPlatform)'
         configuration: '$(buildConfiguration)'
+        restoreNugetPackages: true
+        msbuildArguments: '/t:Restore'
 
     - task: DotNetCoreCLI@2
       displayName: 'Run Unit Tests'
       inputs:
         command: 'test'
-        projects: '**/*.csproj'
-        testRunTitle: 'sdPlayer-tests-unit'
+        projects: '**/SportsData.Player.Tests.Unit.csproj'
+        testRunTitle: 'player-tests-unit'
 
-- stage: BuildImagePushACR
-  displayName: Build Image & Push to ACR
-  jobs:
-  - job: Build
-    displayName: Build
-    pool:
-      vmImage: $(vmImageName)
-    steps:
-    - task: Docker@2
-      displayName: Build and push an image to container registry
+    - task: DotNetCoreCLI@2
+      displayName: 'Run Integration Tests'
       inputs:
-        command: buildAndPush
-        repository: $(imageRepository)
-        dockerfile: $(dockerfilePath)
-        containerRegistry: $(dockerRegistryServiceConnection)
-        tags: |
-          $(tag)
-  - job: Deploy
-    steps:
-    - task: AzureWebAppContainer@1
-      displayName: 'Azure Web App on Container Deploy'
-      inputs:
-        azureSubscription: $(azureSubscription)
-        appName: $(appName)
-        containers: $(containerRegistry)/$(imageRepository):$(tag)
-# - stage: DeployToDev
-#   displayName: Deploy to Dev
-#   jobs:
-#   - job: Deploy
-#     steps:
-#     - task: AzureWebAppContainer@1
-#       displayName: 'Azure Web App on Container Deploy'
-#       inputs:
-#         azureSubscription: $(azureSubscription)
-#         appName: $(appName)
-#         containers: $(containerRegistry)/$(imageRepository):$(tag)
+        command: 'test'
+        projects: '**/SportsData.Player.Tests.Integration.csproj'
+        testRunTitle: 'player-tests-int'
