--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,7 @@ trigger:
       - 'SportsData.Notification/*'
       - 'SportsData.Player/*'
       - 'SportsData.Producer/*'
+      - 'SportsData.Provider/*'
       - 'SportsData.Season/*'
       - 'SportsData.Venue/*'
 
