--- a/test/integration/SportsData.Season.Tests.Integration/SportsData.Season.Tests.Integration.csproj
+++ b/test/integration/SportsData.Season.Tests.Integration/SportsData.Season.Tests.Integration.csproj
@@ -6,4 +6,9 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="7.0.0" />
+    <PackageReference Include="xunit" Version="2.9.2" />
+  </ItemGroup>
+
 </Project>
