--- a/src/SportsData.Producer/Dockerfile
+++ b/src/SportsData.Producer/Dockerfile
@@ -1,22 +1,31 @@
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-USER app
+# See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
+
+# This stage is used when running from VS in fast mode (Default for Debug configuration)
+FROM mcr.microsoft.com/dotnet/aspnet:9.0-alpine AS base
+USER $APP_UID
 WORKDIR /app
+EXPOSE 8080
+EXPOSE 8081
 
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+
+# This stage is used to build the service project
+FROM mcr.microsoft.com/dotnet/sdk:9.0-alpine AS build
+ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY [".", "./src/SportsData.Producer/"]
-RUN dotnet nuget add source https://pkgs.dev.azure.com/jrandallsexton/sport-deets/_packaging/sports-data-nuget/nuget/v3/index.json
-RUN dotnet restore "./src/SportsData.Producer/SportsData.Producer.csproj"
+COPY ["SportsData.Producer/SportsData.Producer.csproj", "SportsData.Producer/"]
+COPY ["SportsData.Core/SportsData.Core.csproj", "SportsData.Core/"]
+RUN dotnet restore "./SportsData.Producer/SportsData.Producer.csproj"
 COPY . .
-WORKDIR "/src/src/SportsData.Producer"
-RUN dotnet build "./SportsData.Producer.csproj" -c Release -o /app/build
+WORKDIR "/src/SportsData.Producer"
+RUN dotnet build "./SportsData.Producer.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
+# This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
-RUN dotnet publish "./SportsData.Producer.csproj" -c Release -o /app/publish /p:UseAppHost=false
+ARG BUILD_CONFIGURATION=Release
+RUN dotnet publish "./SportsData.Producer.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
+# This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-EXPOSE 8080
-EXPOSE 8081
 ENTRYPOINT ["dotnet", "SportsData.Producer.dll"]
