--- a/src/SportsData.Season/azure-pipelines.yml
+++ b/src/SportsData.Season/azure-pipelines.yml
@@ -69,14 +69,14 @@ stages:
         msbuildArguments: '/t:Restore'
 
     - task: DotNetCoreCLI@2
-      displayName: 'Run Unit Tests'
+      displayName: 'Unit Tests'
       inputs:
         command: 'test'
         projects: '**/SportsData.Season.Tests.Unit.csproj'
         testRunTitle: 'contest-tests-unit'
 
     - task: DotNetCoreCLI@2
-      displayName: 'Run Integration Tests'
+      displayName: 'Integration Tests'
       inputs:
         command: 'test'
         projects: '**/SportsData.Season.Tests.Integration.csproj'
