--- a/src/SportsData.Venue/azure-pipelines.yml
+++ b/src/SportsData.Venue/azure-pipelines.yml
@@ -38,6 +38,7 @@ variables:
 
 stages:
 - stage: BuildAndTest
+  displayName: "Build & Test: Venue"
   jobs:
   - job: BuildAndTest
     displayName: BuildAndTest
