mod only to test ci/cd to dev

--- a/src/SportsData.Api/azure-pipelines.yml
+++ b/src/SportsData.Api/azure-pipelines.yml
@@ -91,6 +91,7 @@ stages:
         tags: |
           $(tag)
   - job: Deploy
+    dependsOn: Build
     steps:
     - task: AzureWebAppContainer@1
       displayName: 'Azure Web App on Container Deploy'
