all svc health checks working via api hc; hc link on api swagger

--- a/src/SportsData.Api/appsettings.json
+++ b/src/SportsData.Api/appsettings.json
@@ -5,5 +5,33 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ContestProviderOptions": {
+    "SecretKey": "foo",
+    "ApiUrl": "http://localhost:5066/"
+  },
+  "FranchiseProviderOptions": {
+    "SecretKey": "foo",
+    "ApiUrl": "http://localhost:5021/"
+  },
+  "NotificationProviderOptions": {
+    "SecretKey": "foo",
+    "ApiUrl": "http://localhost:5068/"
+  },
+  "PlayerProviderOptions": {
+    "SecretKey": "foo",
+    "ApiUrl": "http://localhost:5163/"
+  },
+  "ProducerProviderOptions": {
+    "SecretKey": "foo",
+    "ApiUrl": "http://localhost:5253/"
+  },
+  "SeasonProviderOptions": {
+    "SecretKey": "foo",
+    "ApiUrl": "http://localhost:5037/"
+  },
+  "VenueProviderOptions": {
+    "SecretKey": "foo",
+    "ApiUrl": "http://localhost:5253/"
+  },
   "AllowedHosts": "*"
 }
