change some config and DI

--- a/src/SportsData.Api/appsettings.json
+++ b/src/SportsData.Api/appsettings.json
@@ -5,31 +5,31 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ContestProviderOptions": {
+  "ContestProviderConfig": {
     "SecretKey": "foo",
     "ApiUrl": "http://localhost:5066/"
   },
-  "FranchiseProviderOptions": {
+  "FranchiseProviderConfig": {
     "SecretKey": "foo",
     "ApiUrl": "http://localhost:5021/"
   },
-  "NotificationProviderOptions": {
+  "NotificationProviderConfig": {
     "SecretKey": "foo",
     "ApiUrl": "http://localhost:5068/"
   },
-  "PlayerProviderOptions": {
+  "PlayerProviderConfig": {
     "SecretKey": "foo",
     "ApiUrl": "http://localhost:5163/"
   },
-  "ProducerProviderOptions": {
+  "ProducerProviderConfig": {
     "SecretKey": "foo",
     "ApiUrl": "http://localhost:5253/"
   },
-  "SeasonProviderOptions": {
+  "SeasonProviderConfig": {
     "SecretKey": "foo",
     "ApiUrl": "http://localhost:5037/"
   },
-  "VenueProviderOptions": {
+  "VenueProviderConfig": {
     "SecretKey": "foo",
     "ApiUrl": "http://localhost:5253/"
   },
