docker fix contest; svc2svc

--- a/src/SportsData.Api/appsettings.json
+++ b/src/SportsData.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "ContestProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://sports-data-contest/"
+    "ApiUrl": "http://sports-data-contest-service/"
   },
   "FranchiseProviderConfig": {
     "SecretKey": "foo",
