--- a/src/SportsData.Api/appsettings.json
+++ b/src/SportsData.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "ContestProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://sports-data-constest-service:30081"
+    "ApiUrl": "http://contest-service:30081"
   },
   "FranchiseProviderConfig": {
     "SecretKey": "foo",
