--- a/src/SportsData.Api/appsettings.json
+++ b/src/SportsData.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "ContestProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://contest-service:8180"
+    "ApiUrl": "http://contest-service/"
   },
   "FranchiseProviderConfig": {
     "SecretKey": "foo",
