bring in other services

--- a/src/SportsData.Api/appsettings.Development.json
+++ b/src/SportsData.Api/appsettings.Development.json
@@ -4,5 +4,34 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ContestProviderConfig": {
+    "SecretKey": "foo",
+    "ApiUrl": "http://contest-service:8080"
+  },
+  "FranchiseProviderConfig": {
+    "SecretKey": "foo",
+    "ApiUrl": "http://franchise-service:8080"
+  },
+  "NotificationProviderConfig": {
+    "SecretKey": "foo",
+    "ApiUrl": "http://notification-service:8080"
+  },
+  "PlayerProviderConfig": {
+    "SecretKey": "foo",
+    "ApiUrl": "http://player-service:8080"
+  },
+  "ProducerProviderConfig": {
+    "SecretKey": "foo",
+    "ApiUrl": "http://prodcuer-service:8080"
+  },
+  "SeasonProviderConfig": {
+    "SecretKey": "foo",
+    "ApiUrl": "http://season-service:8080"
+  },
+  "VenueProviderConfig": {
+    "SecretKey": "foo",
+    "ApiUrl": "http://venue-service:8080"
+  },
+  "AllowedHosts": "*"
 }
