--- a/src/SportsData.Contest/Dockerfile
+++ b/src/SportsData.Contest/Dockerfile
@@ -1,23 +1,22 @@
-#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
+# See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
 # This stage is used when running from VS in fast mode (Default for Debug configuration)
 FROM mcr.microsoft.com/dotnet/aspnet:9.0-alpine AS base
 USER $APP_UID
 WORKDIR /app
-
-# Expose the API port
 EXPOSE 8080
 EXPOSE 8081
+
 
 # This stage is used to build the service project
 FROM mcr.microsoft.com/dotnet/sdk:9.0-alpine AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["../SportsData.Contest/SportsData.Contest.csproj", "SportsData.Contest/"]
-COPY ["../SportsData.Core/SportsData.Core.csproj", "SportsData.Core/"]
-RUN dotnet restore "./SportsData.Contest/SportsData.Contest.csproj"
+COPY ["src/SportsData.Contest/SportsData.Contest.csproj", "src/SportsData.Contest/"]
+COPY ["src/SportsData.Core/SportsData.Core.csproj", "src/SportsData.Core/"]
+RUN dotnet restore "./src/SportsData.Contest/SportsData.Contest.csproj"
 COPY . .
-WORKDIR "/src/SportsData.Contest"
+WORKDIR "/src/src/SportsData.Contest"
 RUN dotnet build "./SportsData.Contest.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # This stage is used to publish the service project to be copied to the final stage
