--- a/src/SportsData.Season/Dockerfile
+++ b/src/SportsData.Season/Dockerfile
@@ -1,24 +1,31 @@
-#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
+# See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-USER app
+# This stage is used when running from VS in fast mode (Default for Debug configuration)
+FROM mcr.microsoft.com/dotnet/aspnet:9.0-alpine AS base
+USER $APP_UID
 WORKDIR /app
+EXPOSE 8080
+EXPOSE 8081
 
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+
+# This stage is used to build the service project
+FROM mcr.microsoft.com/dotnet/sdk:9.0-alpine AS build
+ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY [".", "./src/SportsData.Season/"]
-RUN dotnet nuget add source https://pkgs.dev.azure.com/jrandallsexton/sport-deets/_packaging/sports-data-nuget/nuget/v3/index.json
+COPY ["src/SportsData.Season/SportsData.Season.csproj", "src/SportsData.Season/"]
+COPY ["src/SportsData.Core/SportsData.Core.csproj", "src/SportsData.Core/"]
 RUN dotnet restore "./src/SportsData.Season/SportsData.Season.csproj"
 COPY . .
 WORKDIR "/src/src/SportsData.Season"
-RUN dotnet build "./SportsData.Season.csproj" -c Release -o /app/build
+RUN dotnet build "./SportsData.Season.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
+# This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
-RUN dotnet publish "./SportsData.Season.csproj" -c Release -o /app/publish /p:UseAppHost=false
+ARG BUILD_CONFIGURATION=Release
+RUN dotnet publish "./SportsData.Season.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
+# This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-EXPOSE 8080
-EXPOSE 8081
 ENTRYPOINT ["dotnet", "SportsData.Season.dll"]
