hc changes; local cluster running

--- a/src/SportsData.Api/appsettings.Development.json
+++ b/src/SportsData.Api/appsettings.Development.json
@@ -7,31 +7,31 @@
   },
   "ContestProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://contest-service:8080"
+    "ApiUrl": "http://localhost:5066/"
   },
   "FranchiseProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://franchise-service:8080"
+    "ApiUrl": "http://localhost:5021/"
   },
   "NotificationProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://notification-service:8080"
+    "ApiUrl": "http://localhost:5068/"
   },
   "PlayerProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://player-service:8080"
+    "ApiUrl": "http://localhost:5163/"
   },
   "ProducerProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://prodcuer-service:8080"
+    "ApiUrl": "http://localhost:5131/"
   },
   "SeasonProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://season-service:8080"
+    "ApiUrl": "http://localhost:5037/"
   },
   "VenueProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://venue-service:8080"
+    "ApiUrl": "http://localhost:5253/"
   },
   "AllowedHosts": "*"
 }
